# python-devops-udemy

./: .gitignore
exercices/: advancedretry.py  argsanitizer.py  backupscriptcleanup.py  basicscriptlogger.py  deploymanager.py  dictionaries.py  disk-usage.py  dynamiclogging.py  functions.py  generators.py  inventoryreporter.py  jenkinsjobtrigger.py  jsonconfigupdater.py  lazypipeline.py  lists.py  logarchiver.py  loglineerrordetector.py  loglinegenerator.py  logrotator.py  managetags.py  pagerdutyfetcher.py  parser.py  publicholidaycheck.py  rbacdecorator.py  robustrbac.py  rsrctagger.py  sensitiveredactor.py  sets.py  systemhealthcheck.py  userloginparser.py  validateinputdeploy.py
exercices/files/: conf.txt  config.json  log.txt
project-cicd/: pyproject.toml
project-cicd/simple_http_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project-cicd/src/simple_http_checker/: checker.py  cli.py
project-cicd/src/simple_http_checker.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
