[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-http-checker"
version = "0.1.0"
description = "To check URLs in CLI"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"